crates/polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_bond_with_duplicate_from.snap
---
source: crates/polychem/src/polymers/polymer_database.rs
description: bonds
expression: out
---
  × error parsing KDL

Error: 
  × duplicate node `from`, single node expected
   ╭─[test:3:5]
 2 │     from "Hydroxyl" at="Reducing End"
 3 │     from "Hydroxyl" at="Nonreducing End"
   ·     ──┬─
   ·       ╰── unexpected node
 4 │ }
   ╰────
